--- a/app/src/main/res/drawable/shirt_background_item.xml
+++ b/app/src/main/res/drawable/shirt_background_item.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient android:angle="45"
-                android:endColor="@color/colorAccent"
-                android:startColor="@color/cardview_shadow_end_color" />
+                android:endColor="@android:color/transparent"
+                android:startColor="@color/colorPetrolLight" />
             <stroke android:width="1dp" android:color="@android:color/black" />
             <corners android:radius="@dimen/medium" />
         </shape>
