--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/medium"
+    android:background="@drawable/main_background"
     tools:context="com.example.android.inventoryapp.ProductActivity">
 
     <LinearLayout
