--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,8 +7,14 @@
     <dimen name="x_small">4dp</dimen>
     <dimen name="activity_edit_width">176dp</dimen>
     <dimen name="activity_label_width">106dp</dimen>
+    <dimen name="shop_button_width">156dp</dimen>
+    <dimen name="shop_button_height">56dp</dimen>
 
     <dimen name="textSize_small">12sp</dimen>
     <dimen name="textSize_medium">14sp</dimen>
     <dimen name="textSize_large">18sp</dimen>
+    <dimen name="basket_label_text_medium">22sp</dimen>
+    <dimen name="basket_label_text_large">26sp</dimen>
+    <dimen name="basket_label_text_x_large">34sp</dimen>
+
 </resources>
